# comfyui-cli

./: .gitignore  COMFYUI.md  LICENSE  README.md  pyproject.toml  setup.py
cli_anything/comfyui/: README.md  __init__.py  comfyui_cli.py
cli_anything/comfyui/core/: client.py  workflow.py
cli_anything/comfyui/tests/: TEST.md  __init__.py  test_core.py  test_full_e2e.py
cli_anything/comfyui/utils/: __init__.py
comfyui/: README.md  __init__.py  comfyui_cli.py
comfyui/core/: __init__.py  diverse.py  generate.py
comfyui/tests/: TEST.md  test_core.py  test_full_e2e.py
comfyui/utils/: config.py  formatters.py
docs/plans/: 2026-03-16-comfyui-package-restructure-design.md  2026-03-16-comfyui-package-restructure.md
